--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,6 +2,5 @@ black~=21.10b0
 pytest~=6.2.2
 pdoc~=6.3.2
 requests~=2.25.1
-tqdm~=4.62.2
-git+https://github.com/sarnold/pystache
+pystache
 gitchangelog
