--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^7.1.1"
 flake8 = "^4.0.1"
 black = "^22.3.0"
 requests = "^2.27.1"
+pytest-xdist = "^2.5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
