--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,19 +19,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install recent FFmpeg
+      uses: FedericoCarboni/setup-ffmpeg@v1
+      id: setup-ffmpeg
     - name: Install ffmpeg libs
       run: |
         sudo apt-get install libavformat-dev libavcodec-dev libavdevice-dev libavutil-dev libavfilter-dev libswscale-dev libavresample-dev
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+        cache-dependency-path: '**/requirements*.txt'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+    - name: Generate test sequences
+      run: |
+        cd test && ./generate_ffmpeg_sources.sh && cd -
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
