--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@ authors = ["Werner Robitza <werner.robitza@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.8,<3.11"
-numpy = "~=1.22.2"
-scipy = "~=1.8.0"
-av = "~=8.1.0"
-tqdm = "~=4.62.3"
-plotille = "~=4.0.1"
+python = "^3.8.1,<3.12"
+numpy = "~1.23.5"
+scipy = "~1.10.1"
+av = "~10.0.0"
+tqdm = "~4.65.0"
+plotille = "~5.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
+pytest = "^7.4.0"
 flake8 = "^4.0.1"
-black = "^22.3.0"
-requests = "^2.27.1"
+black = "^23.3.0"
+requests = "^2.31.0"
 pytest-xdist = "^2.5.0"
 
 [tool.poetry.scripts]
