--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy~=1.22.2
-scipy~=1.8.0
-av~=8.1.0
-tqdm~=4.62.3
-plotille~=4.0.1
+av==10.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Windows"
+numpy==1.23.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+plotille==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
