--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,23 +29,20 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        cache: 'pip'
-        cache-dependency-path: '**/requirements*.txt'
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+        uv sync --all-groups
     - name: Generate test sequences
       run: |
         cd test && ./generate_ffmpeg_sources.sh && cd -
-    - name: Lint with flake8
+    - name: Lint with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        uv run ruff check src/
+    - name: Check formatting with ruff
+      run: |
+        uv run ruff format --check src/
     - name: Test with pytest
       run: |
-        pytest test/test.py
+        uv run pytest test/test.py
