--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  FFMPEG_VERSION: "8.0"
+
 jobs:
   build:
 
@@ -19,18 +22,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install recent FFmpeg
-      uses: FedericoCarboni/setup-ffmpeg@v1
-      id: setup-ffmpeg
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
+    - name: Cache ffmpeg download
+      uses: actions/cache@v4
+      id: cache-ffmpeg
+      with:
+        path: /opt/ffmpeg/ffmpeg-n${{ env.FFMPEG_VERSION }}-latest-linux64-gpl-${{ env.FFMPEG_VERSION }}.tar.xz
+        key: ${{ runner.os }}-ffmpeg-${{ env.FFMPEG_VERSION }}
+    - name: Download ffmpeg if not cached
+      if: steps.cache-ffmpeg.outputs.cache-hit != 'true'
+      run: |
+        echo "Downloading ffmpeg ${FFMPEG_VERSION}"
+        sudo mkdir -p /opt/ffmpeg
+        wget -q https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n${{ env.FFMPEG_VERSION }}-latest-linux64-gpl-${{ env.FFMPEG_VERSION }}.tar.xz -P /opt/ffmpeg
+    - name: Extract and install ffmpeg
+      run: |
+        echo "Extracting ffmpeg ${FFMPEG_VERSION}"
+        sudo mkdir -p /opt/ffmpeg/extracted
+        sudo tar --strip-components 1 -xf /opt/ffmpeg/ffmpeg-n${{ env.FFMPEG_VERSION }}-latest-linux64-gpl-${{ env.FFMPEG_VERSION }}.tar.xz -C /opt/ffmpeg/extracted
+        echo "Installing ffmpeg ${FFMPEG_VERSION}"
+        sudo cp /opt/ffmpeg/extracted/bin/ffmpeg /usr/bin/ffmpeg
     - name: Install ffmpeg libs
       run: |
         sudo apt-get install libavformat-dev libavcodec-dev libavdevice-dev libavutil-dev libavfilter-dev libswscale-dev
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install uv
-      uses: astral-sh/setup-uv@v5
     - name: Install dependencies
       run: |
         uv sync --all-groups
